--- a/config/settings.json
+++ b/config/settings.json
@@ -1,5 +1,5 @@
 {
-"OwnerNumber":"6289512545999", 
-"OwnerName":"Ramdani Official",
-"BotName":"Ramdani botz"
+"OwnerNumber":"6283804343232", 
+"OwnerName":"Owner gamtenk",
+"BotName":"Me-Bot"
 }
